tests/typec-test/test_out/cross-module-item-access.txt
error: Func not found
 --> cross-module-item-access\root.ctl:8:30
  |
8 | fn third_main -> uint => b\A\pass(0)
  |                              ^^^^ this does not exist
  |
  = info: queried '0\A\pass'

info: tir repr of functions:
 fn [todo] 2\pass(var0: param 0) -> param 0 return var0

fn [todo] uint\2\pass(var0: uint) -> uint return var0

fn [todo] 2\A\2\pass(var0: uint) -> uint return var0

fn [todo] 0\pass(var0: param 0) -> param 0 return var0

fn [todo] uint\0\pass(var0: uint) -> uint return var0

fn [todo] uint\0\pass_other(var0: uint, var1: param 0) -> param 0 return var1

fn [todo] 0\A[param 0]\0\pass(var0: param 0) -> param 0 return var0

fn [todo] 1\main() -> uint return 2\pass[uint](uint\2\pass(uint\0\pass(2\A\2\pass(0))))

fn [todo] 1\other_main() -> uint return 2\pass[uint](uint\0\pass_other[uint](0, 0))



